/*
 * $Id: ChangeLog,v 1.1645 2003/11/02 04:29:52 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-01 20:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Minor correction to handling of ~
    * Added bAutCompile optional param to PP_PreProText()

  * tests/pp_harb.ch
    * Added .F. for bAutoCompile in call to PP_PreProTExt()
    * Commented out non used ScriptSiteAutomateGlobals()

2003-02-11 05:30 UTC+1000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * utils/hbdict/hbdict.prg
  * utils/hbdict/i18n/it_IT.hit
    * Using Tbrowse and TEdit to make the program more appealing.
      Still not complete, but very near to be now.

2003-11-02 00:49 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * contrib/rdd_ads/ads1.c
  * contrib/rdd_ads/adsfunc.c
  * contrib/rdd_ads/adsmgmnt.c
    ! Some code formating to have {} blocks always there.

2003-11-01 11:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Minor fix to hb_strAtSkipStrings() to correctly support stringify result pattern <"x">.

2003-11-01 14:10 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * contrib/rdd_ads/adsfunc.c
  * contrib/rdd_ads/doc/en/adsfuncs.txt
    + Added 2nd (ignored) & 3rd params to adsKeyNo() in order to perform like OrdKeyNo() for other RDD's.
      The default remains ADS_IGNOREFILTERS for compatibility (like adsKeyCount() does).
      Thanks to Luis Krause Mantilla for this.

2003-10-31 22:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    + Added support for CATCH without a Catcher variable.
      TRY
         ...
      CATCH
         ...
      END

  * source/macro/macro.slx
    ! Fixed GPF trap when 2 IDENTIFIER tokens in sequence (syntax error).

  * source/pp/ppcore.c