@@ -1,5 +1,5 @@
 /*
- * $Id: ppcore.c,v 1.93 2003/11/01 12:45:05 ronpinkas Exp $
+ * $Id: ppcore.c,v 1.94 2003/11/01 19:25:37 ronpinkas Exp $
  */
 
 /*
@@ -1322,11 +1322,25 @@ ULONG HB_EXPORT hb_strAtSkipStrings( const char * szSub, ULONG ulSubLen, const c
    {
       ULONG ulPos = 0;
       ULONG ulSubPos = 0;
+      BOOL bMarker = FALSE;
 
       while( ulPos < ulLen && ulSubPos < ulSubLen )
       {
-         if( szText[ ulPos ] == '"' && ( ulPos == 0 || szText[ ulPos - 1 ] != '<' ) )
+         if( szText[ ulPos ] == '"' )
          {
+            if( ulPos && szText[ ulPos - 1 ] == '<' )
+            {
+               bMarker = TRUE;
+               ulPos++;
+               continue;
+            }
+            else if( bMarker && szText[ ulPos + 1 ] == '>' )
+            {
+               bMarker = FALSE;
+               ulPos++;
+               continue;
+            }
+
             while( ++ulPos < ulLen && szText[ ulPos ] != '"' )
             {
                // Skip.
