@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1645 2003/11/02 04:29:52 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1646 2003/11/02 04:58:46 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-01 21:24 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    * Minor additional fix to hb_strAtSkipStrings() to correctly support stringify result pattern <"x">.
 
 2003-11-01 20:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
